[package]
name = "cryptography"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-crypto = "0.2.36"
hmac = "0.12.0"
sha2 = "0.10.1"
generic-array = "0.14.5"
hex-literal = "0.3.4"
hex = "0.4.3"
sha3 = "0.10.0"